--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,10 @@
-set(COMPONENT_SRCS "main.c")
+set(COMPONENT_SRCS
+    "main.c"
+    "task_btn.c"
+    "task_lcd.c"
+    "wlan.c"
+    "gc9a01.c"
+    "hspi.c"
+)
 
 register_component()
