--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,6 +3,7 @@ set(COMPONENT_SRCS
     "task_btn.c"
     "task_lcd.c"
     "task_wlan.c"
+    "task_ntp.c"
     "wlan.c"
     "gc9a01.c"
     "hspi.c"
