--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,17 +14,26 @@
         "${IDF_PATH}/components/driver/include",
         "${IDF_PATH}/components/esp32/include",
         "${IDF_PATH}/components/esp_common/include",
+        "${IDF_PATH}/components/esp_eth/include",
+        "${IDF_PATH}/components/esp_event/include",
+        "${IDF_PATH}/components/esp_netif/include",
         "${IDF_PATH}/components/esp_rom/include",
         "${IDF_PATH}/components/esp_system/include",
         "${IDF_PATH}/components/esp_timer/include",
+        "${IDF_PATH}/components/esp_wifi/include",
         "${IDF_PATH}/components/freertos/include",
         "${IDF_PATH}/components/freertos/xtensa/include",
         "${IDF_PATH}/components/hal/esp32/include",
         "${IDF_PATH}/components/hal/include",
         "${IDF_PATH}/components/heap/include",
+        "${IDF_PATH}/components/lwip/include/apps",
+        "${IDF_PATH}/components/lwip/include/apps/sntp",
+        "${IDF_PATH}/components/lwip/lwip/src/include",
+        "${IDF_PATH}/components/lwip/port/esp32/include",
         "${IDF_PATH}/components/soc/include",
         "${IDF_PATH}/components/soc/soc/esp32/include",
         "${IDF_PATH}/components/soc/soc/include",
+        "${IDF_PATH}/components/tcpip_adapter/include",
         "${IDF_PATH}/components/xtensa/esp32/include",
         "${IDF_PATH}/components/xtensa/include",
         "${HOME}/.espressif/tools/xtensa-esp32-elf/esp-2020r3-8.4.0/xtensa-esp32-elf/xtensa-esp32-elf/include",
