--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,11 +5,13 @@ set(COMPONENT_SRCS
     "task_wlan.c"
     "task_ntp.c"
     "task_earth.c"
+    "task_ble.c"
     "wlan.c"
     "gc9a01.c"
     "hspi.c"
     "earth.c"
     "decode_image.c"
+    "blec.c"
 )
 
 register_component()
