build: Rework project structure

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,24 +1,17 @@
-set(COMPONENT_SRCS
-    "main.c"
-    "task_btn.c"
-    "task_lcd.c"
-    "task_wlan.c"
-    "task_ntp.c"
-    "task_earth.c"
-    "task_ble.c"
-    "wlan.c"
-    "gc9a01.c"
-    "hspi.c"
-    "earth.c"
-    "decode_image.c"
-    "blec.c"
-    "userdata.c"
+set(COMPONENT_SRCDIRS
+    "."
+    "display"
+    "earth"
+    "network"
+    "tasks"
 )
 
+set(COMPONENT_ADD_INCLUDEDIRS "include")
+
 set(COMPONENT_EMBED_FILES
-    "pic_offline.jpg"
-    "pic_loading.jpg"
-    "pic_qrcode.jpg"
+    "images/pic_offline.jpg"
+    "images/pic_loading.jpg"
+    "images/pic_qrcode.jpg"
 )
 
 register_component()
@@ -28,3 +21,14 @@ if(NOT $ENV{EARTH_URL} STREQUAL "")
         -DEARTH_URL="$ENV{EARTH_URL}"
     )
 endif()
+
+execute_process(COMMAND git describe --tags --abbrev=0 OUTPUT_VARIABLE GIT_TAG OUTPUT_STRIP_TRAILING_WHITESPACE)
+execute_process(COMMAND git rev-parse --short HEAD OUTPUT_VARIABLE GIT_COMMIT OUTPUT_STRIP_TRAILING_WHITESPACE)
+execute_process(COMMAND git rev-list --count HEAD OUTPUT_VARIABLE GIT_INCREMENT OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+target_compile_options(
+    ${COMPONENT_LIB} PRIVATE
+    -DGIT_TAG="${GIT_TAG}"
+    -DGIT_COMMIT="${GIT_COMMIT}"
+    -DGIT_INCREMENT=${GIT_INCREMENT}
+)
